Some final changes before final submission  - css fix for the navbar overlapping the page content when scrolling  - added lots of code comments for clarity  - made google oauth code clearer  - opened up authentication to work for any google account to allow for    testing

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -10,6 +10,7 @@
   background-color: white;
   position: absolute;
   width: 100%;
+  z-index: 1;
 }
 
 .fail {
